--- a/styles.css
+++ b/styles.css
@@ -8,5 +8,43 @@
     margin: 5px;
     display: block; /* Create a line break between images */
   }
-  
-  
+
+#result-container table {
+    border-collapse: collapse;
+}
+
+#result-container table, #result-container th, #result-container td {
+    border: 1px solid black;
+}
+
+#result-container td {
+    text-align: center;
+    position: relative;
+}
+
+#result-container img.character-icon {
+    position: absolute;
+    top: -50px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 50px;
+    height: 50px;
+}
+.square-box {
+  width: 50px;
+  height: 50px;
+  background-color: lightgray;
+  border: 1px solid black;
+}
+
+/* Style for toggle containers */
+.toggle-container {
+  display: flex;
+  align-items: center;
+  margin-top: 5px;
+}
+
+/* Style for toggle switches */
+.toggle-switch {
+  margin-left: 5px;
+}
