--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 /* Style for generated images */
-#result-container img {
+#result-container img.generated-image {
   max-width: 500px;
   max-height: 500px;
   margin: 5px;
@@ -26,14 +26,16 @@
   position: relative;
 }
 
-/* Style for character icons */
-#result-container img.character-icon {
-  position: absolute;
-  top: -50px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 50px;
-  height: 50px;
+.character-cell {
+  position: relative;
+  text-align: center;
+}
+
+.character-icon {
+  max-width: 100px;
+  max-height: 100px;
+  display: block;
+  margin: auto;
 }
 
 /* Style for toggle containers */
