--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+* {background-color: rgb(22, 23, 28);
+   color: white;}
+
 /* Style for the result container */
 #result-container {
   margin-top: 20px;
@@ -18,7 +21,7 @@
 }
 
 #result-container table, #result-container th, #result-container td {
-  border: 1px solid black;
+  border: 1px solid white;
 }
 
 #result-container td {
@@ -55,12 +58,30 @@
   text-align: center;
   vertical-align: middle;
   width: 200px;
-  border: 1px solid black;
+  border: 1px solid white;
 }
 
 /* Style for toggle cells */
 .toggle-cell {
   text-align: center;
   vertical-align: middle;
-  border: 1px solid black;
+  border: 1px solid white;
+}
+
+/* Default style for reset elements */
+.default {
+  color: white;
+}
+
+/* Style for the poisened characters */
+.poisoned-character {
+  color: greenyellow;
+  font-style: italic;
+}
+
+/* Style for the dead characters */
+.dead-character {
+  color: grey;
+  text-decoration: line-through;
+  filter: grayscale();
 }
