--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 * {background-color: rgb(22, 23, 28);
    color: white;}
 
-/* Style for the result container */
+/* Style for the container of generated content */
 #result-container {
   margin-top: 20px;
 }
