--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+/* Werewolf Maximum Guide Companion
+   by AnJoMorto */
+
+/* Default dark mode baby*/
 * {background-color: rgb(22, 23, 28);
    color: white;}
 
