--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@
 
 /* Default dark mode baby*/
 * {background-color: rgb(22, 23, 28);
-   color: white;}
+   color: white;
+  }
 
 /* Style for the container of generated content */
 #result-container {
