--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Werewolf Maximum Guide Companion
+/* Werewolves on thr Clocktower Guide Companion
    by AnJoMorto */
 
 /* Default dark mode baby*/
