--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,8 @@
 .done {
   text-decoration: line-through;
 }
+
+/* Style for the character hosting the Sleepwalker */
+.host {
+  color: red;
+}
