--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Werewolves on thr Clocktower Guide Companion
+/* Werewolves on the Clocktower Guide Companion
    by AnJoMorto */
 
 /* Default dark mode baby*/
