--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-/* Default dark mode baby*/
+/* Default dark mode */
 * {
   background-color: rgb(22, 23, 28);
   color: white;
@@ -27,14 +27,14 @@ header {
   color: #f4f4f4;
   text-align: center;
   width: 100%;
-  margin-bottom: 0; /* Adjusted margin to remove the gap */
+  margin-bottom: 0;
   font-size: 40px;
 }
 
 footer {
-  background-color: #545454; /* A darker footer background color */
+  background-color: #545454;
   color: #f4f4f4;
-  padding: 5x; /* Adjusted padding for a thinner footer */
+  padding: 5px;
   text-align: center;
   width: 100%;
   position: fixed;
@@ -159,6 +159,7 @@ button {
   border: 2px solid #3498db; /* Border color */
   border-radius: 10px;
   margin-right: 10px; /* Added margin-right */
+  margin-top: 10px; /* Added margin-top */
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
