--- a/styles.css
+++ b/styles.css
@@ -55,3 +55,22 @@ input {
 .dropdown-item:hover {
     background: #eee;
 }
+
+/* Controls */
+.table-controls {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.table-controls button {
+    padding: 5px 10px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.table-controls input {
+    width: 60px;
+    text-align: center;
+}
